# nasap-fit-py

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
nasap/fitting/: __init__.py  objective_func.py  rss.py
nasap/fitting/lmfit/: __init__.py  minimizer.py  objective_func.py
nasap/fitting/lmfit/tests/: test_iter_cb.py  test_minimizer.py  test_objective_func.py
nasap/fitting/sample_data/: a_to_b.py  sample_data.py
nasap/fitting/sample_data/tests/: test_a_to_b.py  test_sample_data.py
nasap/fitting/tests/: test_objective_func.py  test_rss.py
nasap/ode_creation/: __init__.py  reaction_class.py  reactions_to_ode.py
nasap/ode_creation/lib/: particle_change.py
nasap/ode_creation/lib/tests/: test_particle_change.py
nasap/ode_creation/tests/: test_csv_to_reactions.py  test_reactions_to_ode.py
nasap/simulation/: __init__.py  simlation_with_addition.py  simulating_func.py  simulation_with_addition.py
nasap/simulation/tests/: test_addition.py  test_gillespie.py  test_simulating_func.py  test_simulation_with_addition.py
nasap/simulation/utils/: __init__.py  id_value_dict_to_array.py  id_value_mapping_to_array.py
nasap/simulation/utils/tests/: test_alias_id.py  test_conc_to_ratio.py  test_id_value_dict_to_array.py  test_id_value_mapping_to_array.py
