[tool.poetry]
name = "nasap"
version = "0.1.1"
description = "Package for NASAP (Numerical Analysis of Self-Assembly Process)"
authors = ["neji-craftsman <142223934+neji-craftsman@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
scipy = "^1.14.1"
lmfit = "^1.3.2"
numdifftools = "^0.9.41"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241009"
hypothesis = "^6.122.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
