[tool.poetry]
name = "nasap-fit-py"
version = "0.2.0"
description = "Automation tool for NASAP (Numerical Analysis of Self-Assembly Process)"
authors = ["neji-craftsman <142223934+neji-craftsman@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "nasap"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
scipy = "^1.14.1"
lmfit = "^1.3.2"
numdifftools = "^0.9.41"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241009"
hypothesis = "^6.122.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
